[gd_scene load_steps=2 format=3 uid="uid://lxsr3a0c38x2"]

[ext_resource type="Script" path="res://scripts/ui/victory_defeat_screen.gd" id="1_script"]

[node name="VictoryDefeatScreen" type="CanvasLayer"]
layer = 100
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(200, 120)

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "VICTORY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtitleLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "All enemies have been defeated!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "Return to Menu"
